*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.2.20 ===
* Fixed possible file name loss on deactivated plugins for all modern plugin formats.
* Fixed imprecise spectrum graph and left/right channel desynchronization when rapidly
  changing the frequency of filter in Parametric Equalizer plugin series.

=== 1.2.19 ===
* Rollback of source code distribution to tar.gz archive format.
* Fixed unneeded resource object deletion and use-after-free in VST plugin wrapper.
* Fixed window sizing for CLAP plugin format.
* Updated CLAP SDK to 1.2.2.
* Updated VST3 SDK to 3.7.12, may be breaking changes related to parameter identifiers as
  Steinberg has twice reduced the set of valid paremeter identifiers.
* Several fixes in build scripts.

=== 1.2.18 ===
* Implemented Send Mono and Send Stereo plugins for sending audio streams to
  named connection points stored in shared memory.
* Implemented Return Mono and Return Stereo plugins for receiving audio streams from
  named connection points stored in shared memory.
* Added inter-communication between Parametric and Graphic Equalizers using new
  send/return communication primitives which allows to show the spectrogram of
  another Equalizer's output on the graph.
* Added Reverse button for Impulse Responses plugin series that allows to reverse
  the impulse response.
* Added support of sidechain passed by shared memory link for Autogain plugin series.
* Added support of sidechain passed by shared memory link for single-band dynamics processing
  plugin series:
  * Compressor;
  * Dynamics Processor;
  * Expander;
  * Gate;
  * Limiter.
* Added support of sidechain passed by shared memory link for multi-band dynamics processing
  plugin series:
  * GOTT Compressor;
  * Multiband Compressor;
  * Multiband Dynamics Processor;
  * Multiband Expander;
  * Multiband Gate;
  * Multiband Limiter.